<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComplaintFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F5F5F5"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/complaintback"
                android:layout_width="@dimen/_23sdp"
                android:layout_height="@dimen/_21sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_weight="0.1"
                android:scaleType="fitCenter"
                android:src="@drawable/baseline_arrow_back_ios_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_55sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_weight="0.9"
                android:gravity="center"
                android:text="Complaint"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/backgroundbox"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/elevation">

            <!-- Form Fields -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/spacing_medium">

                <!-- Text Input -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/your_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Your Name"
                    android:transitionName="username_tran"
                    app:counterMaxLength="15">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/drivername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="Shahab Ali" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Other Form Fields (Repeat similar TextInputLayouts) -->
                <Spinner
                    android:id="@+id/complaint_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:minHeight="@dimen/_48sdp">

                </Spinner>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/complaint_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Complaint Description"
                    android:transitionName="username_tran"
                    app:counterMaxLength="15">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/complaintDescriptionEditText"
                        android:layout_width="match_parent"
                        android:layout_height="61dp"
                        android:inputType="textMultiLine|textCapSentences"
                        android:scrollbars="vertical"/>
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Submit Button -->
        <Button
            android:id="@+id/btn_complaint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/spacing_large"
            android:backgroundTint="#6D60C6"
            android:text="Submit Complaint" />

    </LinearLayout>


</FrameLayout>