<resources>
    <string name="app_name">Cargo Go</string>

    <string name="navigation_drawer_open">navigation drawer open</string>
    <string name="navigation_drawer_close">navigation drawer close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dashboard_with_map">Dashboard_with_map</string>
    <string name="back_button">Back button</string>
    <string name="title_activity_message_customer_end">message_customer_end</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string-array name="driver_complaints">
        <item>Unsafe Driving</item>
        <item>Late Arrival</item>
        <item>Rude Behavior</item>
        <item>Mishandling of Goods</item>
        <item>Driving without Care</item>
        <item>Failure to Follow Instructions</item>
        <item>No-Show Driver</item>
        <item>Wrong Route Taken</item>
        <item>Refusal to Help with Loading/Unloading</item>
        <item>Other</item>
    </string-array>


</resources>