<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Edit_customer_profileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Left Image -->
            <ImageView
                android:id="@+id/back_edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_back_ios_24"
                android:layout_alignParentStart="true"
                android:padding="16dp"/>

            <ImageView
                android:id="@+id/btn_profile_edit_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/done"
                android:layout_alignParentEnd="true"
                android:padding="16dp"/>

            <!-- Center Text -->
            <TextView
                android:id="@+id/centerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Edit Profile"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_centerHorizontal="true"
                android:padding="4dp"/>
        </RelativeLayout>

        <!-- Profile Layout -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:padding="20dp">

            <!-- Profile border -->
<!--            <de.hdodenhof.circleimageview.CircleImageView-->
<!--                android:id="@+id/profile_border"-->
<!--                android:layout_width="@dimen/_100sdp"-->
<!--                android:layout_height="@dimen/_100sdp"-->
<!--                android:layout_centerHorizontal="true"-->
<!--                android:src="@drawable/circle_background" />-->

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_130sdp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/person_"
                app:civ_border_color="#FFFFFF"
                app:civ_border_width="@dimen/_5sdp" />

            <!--            <ImageView-->
<!--                android:id="@+id/profile_border"-->
<!--                android:layout_width="@dimen/_100sdp"-->
<!--                android:layout_height="@dimen/_100sdp"-->
<!--                android:layout_centerHorizontal="true"-->
<!--                android:src="@drawable/circle_background" />-->

<!--            &lt;!&ndash; Profile image &ndash;&gt;-->
<!--            <ImageView-->
<!--                android:id="@+id/profile_image"-->
<!--                android:layout_width="@dimen/_100sdp"-->
<!--                android:layout_height="@dimen/_90sdp"-->
<!--                android:layout_centerHorizontal="true"-->
<!--                android:scaleType="fitCenter"-->
<!--                android:src="@drawable/person_" />-->

            <!-- Text boxes and button -->
        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Your Information"
            android:textStyle="bold"
            android:textSize="@dimen/_16ssp"
            android:gravity="center"
            android:textColor="@color/btn__color">

        </TextView>

        <!-- Text Fields and Button Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:orientation="vertical">

            <!-- Text Input Fields -->

            <!-- Text Input Field 1 -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_f_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="First Name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fnameedit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/person_"
                    android:text="Yashfa"
                    android:drawablePadding="@dimen/_10sdp"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_l_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Last Name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lnameedit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/person_"
                    android:text="Azhar"
                    android:drawablePadding="@dimen/_10sdp"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


            <!-- Text Input Field 3 -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailedit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/email"
                    android:text="Yashii@gmail.com"
                    android:drawablePadding="@dimen/_10sdp"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Phone No"
                android:transitionName="password_tran">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phonedit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/call_icon"
                    android:drawablePadding="@dimen/_10sdp"
                    android:inputType="phone"
                    android:editable="false"
                    android:focusable="true"
                    android:text="+923129809112" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


    </LinearLayout>


</FrameLayout>